# pymdcord

./: README.md  main.py  pyproject.toml  test.py
pymdcord/: __init__.py  classes.py  main.py
