[tool.poetry]
name = "pymdcord"
version = "0.1.0"
description = "A markdown parser for discord markdown syntax"
authors = ["Shinwoo PARK <shinwoo.park@psw.kr>"]
readme = "README.md"
packages = [{include = "pymdcord"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
